--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "MTA_Subway_GTFS-Realtime_Toolkit": "https://github.com/availabs/MTA_Subway_GTFS-Realtime_Toolkit/tarball/master",
     "MTA_Subway_GTFS_Toolkit": "https://github.com/availabs/MTA_Subway_GTFS_Toolkit/tarball/master",
     "async": "^1.4.2",
+    "connect-timeout": "^1.7.0",
+    "json2xml": "^0.1.2",
+    "jsontoxml": "0.0.11",
     "lodash": "^3.10.1",
     "protobufjs": "^4.0.0",
     "turf": "^2.0.2"
