--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "MTA_Subway_GTFS-Realtime_Toolkit": "https://github.com/availabs/MTA_Subway_GTFS-Realtime_Toolkit/tarball/master",
     "MTA_Subway_GTFS_Toolkit": "https://github.com/availabs/MTA_Subway_GTFS_Toolkit/tarball/master",
-    "async": "^1.4.2",
+    "async": "^1.5.1",
     "connect-timeout": "^1.7.0",
     "json2xml": "^0.1.2",
     "jsontoxml": "0.0.11",
     "lodash": "^3.10.1",
-    "protobufjs": "^4.0.0",
+    "protobufjs": "^4.1.3",
     "turf": "^2.0.2"
   },
   "scripts": {
@@ -35,7 +35,6 @@
   "license": "",
   "devDependencies": {
     "jest": "^0.1.40",
-    "jest-cli": "^0.4.x",
-    "jsonfile": "^2.2.1"
+    "jest-cli": "^0.8.2"
   }
 }
