Remove jest from the dev dependencies.

--- a/package.json
+++ b/package.json
@@ -33,8 +33,5 @@
   },
   "author": "paultomchik",
   "license": "",
-  "devDependencies": {
-    "jest": "^0.1.40",
-    "jest-cli": "^0.8.2"
-  }
+  "devDependencies": {}
 }
